# chess_app_kivy

./: .gitignore  README.md  WSL_Connect_ADB  buildozer.spec  commandos.txt  corner_based_approach.py  kivy-reloader.toml  main.py  pyproject.toml
chessapp/: __init__.py
chessapp/screens/: backup.kv  camera2_screen.py  camera_screen.kv  camera_screen.py  cv2preprocessed_screen.kv  cv2preprocessed_screen.py  imagecrop_screen.kv  imagecrop_screen.py  main_screen.kv  main_screen.py
chessapp/screens/__pycache__/: imagecrop_screen.py
